2004-05-14  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* src/planner-python-plugin.c:
	Changed the python interpreter management.

2004-05-12  Tomasz Kłoczko <kloczek@pld.org.pl>

	* autogen.sh: allow use autogen.sh not only in automake 1.7.x enviroment.
	* data/ui/Makefile.am: fix for include in dist tar ball timetable
	  and python UI files.
	* dotnet/samples/Makefile.am, dotnet/Makefile.am: include in dist
	  tar ball example files.
	* src/Makefile.am: include in dist tar ball missing header files.

2004-05-10  Richard Hult  <richard@imendio.com>

	* src/planner-ttable-view.c (ttable_view_update_zoom_sensitivity) 
	(activate, ttable_view_zoom_out_cb, ttable_view_zoom_in_cb) 
	(ttable_view_zoom_to_fit_cb): Fix bug #141116, patch from Lincoln.

	* data/ui/time-table-view.ui: Fix the weird edit menu.
	* src/planner-ttable-model.c: Start cleaning up coding style.

2004-05-10  Richard Hult  <richard@imendio.com>

	* data/ui/Makefile.am: Dist all ui files unconditionally.

	* data/glade/project-properties.glade:
	* src/planner-phase-dialog.c: (phase_dialog_remove_phase),
	(phase_dialog_new_dialog_run), (phase_cmd_insert_do),
	(phase_cmd_insert_undo), (phase_cmd_insert_free),
	(phase_cmd_insert), (phase_cmd_remove_do), (phase_cmd_remove_undo),

	(phase_cmd_remove_free), (phase_cmd_remove): Commit patch from
	Lincoln Phipps with modifications. Fixes bug #141177 and bug
	#141184.

2004-05-09 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-gantt-row.c: Task link undo with new GError system.

	* src/planner-task-tree.c: 
	Clean "g_free (cmd)" and "g_free (cmd_base->label)" that it's done
	in the command manager.
	TaskCmdTaskMove is renamed to TaskCmdMove.
	Clean Task Move system so we use the new GError system.
	Undo system for link task.

	* src/planner-task-tree.[ch]:
	Export link undo method so planner-gantt-row.c can use it.
	
2004-05-03  Richard Hult  <richard@imendio.com>

	* configure.in:
	* libplanner/mrp-sql.c: (sql_get_last_error), (get_int), (get_id),