@@ -1,3 +1,8 @@
+2004-05-18 Alvaro del Castillo  <acs@barrapunto.com>
+
+	* src/planner-task-tree.c: implemented custom properties editing undo
+	and reset costraints undo.
+
 2004-05-14  Xavier Ordoquy  <xordoquy@wanadoo.fr>
 
 	* src/planner-python-plugin.c:
